tests/bad/invalid_struct_validation.mon
{
    User: #struct { id(Number) },
    my_user :: User = { id: "not a number" }
}
